apps/wazuh-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod

  namespace: wazuh
spec:
  ingressClassName: nginx
  rules:
  - host: wazuh.dev-rspy.esa-copernicus.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 443
  tls:
  - hosts:
    - wazuh.dev-rspy.esa-copernicus.eu
    secretName: dashboard-certs
